# ImGuiAppFramework

./: .gitignore  CMakeLists.txt  README.md
myApp/: CMakeLists.txt
myApp/include/: App.hpp  Demo.hpp  image_helper.h  utilities.hpp
myApp/src/: App.cpp  Demo.cpp  main.cpp
